doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/dambarpun/Blue J(Java Code)/ProjectSudoku
-d
/Users/dambarpun/Blue J(Java Code)/ProjectSudoku/doc
-encoding
UTF-8
-charset
UTF-8
/Users/dambarpun/Blue J(Java Code)/ProjectSudoku/ServerResponseTest.java
<---- end of javadoc command ---->
Loading source file /Users/dambarpun/Blue J(Java Code)/ProjectSudoku/ServerResponseTest.java...
/Users/dambarpun/Blue J(Java Code)/ProjectSudoku/ServerResponseTest.java:12: error: ')' expected
    void setOnClickListener(MyCallBack myCallBack({
                                                 ^
/Users/dambarpun/Blue J(Java Code)/ProjectSudoku/ServerResponseTest.java:13: error: illegal start of expression
        public void onCall() {
        ^
/Users/dambarpun/Blue J(Java Code)/ProjectSudoku/ServerResponseTest.java:13: error: illegal start of expression
        public void onCall() {
               ^
/Users/dambarpun/Blue J(Java Code)/ProjectSudoku/ServerResponseTest.java:13: error: ';' expected
        public void onCall() {
                          ^
/Users/dambarpun/Blue J(Java Code)/ProjectSudoku/ServerResponseTest.java:16: error: illegal start of type
    }));
     ^
/Users/dambarpun/Blue J(Java Code)/ProjectSudoku/ServerResponseTest.java:16: error: ';' expected
    }));
      ^
6 errors
